src/objects/VIP_Contact__c.object
<CustomObject>
    <description>CXE VIP Contacts.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>VIP_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allegiance__c</fullName>
        <label>Allegiance</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_Mobile__c</fullName>
        <description>Mobile 3</description>
        <label>Alternative Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assistant_Name__c</fullName>
        <label>Assistant Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistant_Phone__c</fullName>
        <label>Assistant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <description>Birthdate</description>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CXE_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>VIP_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Customer Services</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources (HR)</fullName>
                </value>
                <value>
                    <fullName>Information Technology (IT)</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Public Relations (PR)</fullName>
                </value>
                <value>
                    <fullName>Research and Development (R&amp;D)</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Fax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Events_Attended__c</fullName>
        <label>Events Attended</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Golf Event</fullName>
                </value>
                <value>
                    <fullName>Powerclub</fullName>
                </value>
                <value>
                    <fullName>Luminaries</fullName>
                </value>
                <value>
                    <fullName>Luminaries Attendance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Business Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Transgender</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prefer not to disclose</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Google__c</fullName>
        <label>Google+</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instagram__c</fullName>
        <label>Instagram</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Living common law</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Prefer not to disclose</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>TEXT (Salutation__c) +  &quot; &quot; &amp; First_Name__c &amp; &quot; &quot; &amp;  Middle_Name__c &amp; &quot; &quot;  &amp;  Last_Name__c &amp; &quot; &quot;  &amp;  Suffix__c</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>Australian</fullName>
                </value>
                <value>
                    <fullName>Austrian</fullName>
                </value>
                <value>
                    <fullName>Belgian</fullName>
                </value>
                <value>
                    <fullName>Brazilian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Dane</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>European</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Filipino-Australian</fullName>
                </value>
                <value>
                    <fullName>Filipino-Chinese</fullName>
                </value>
                <value>
                    <fullName>Finn</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>German-Italian</fullName>
                </value>
                <value>
                    <fullName>Icelander</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Iranian</fullName>
                </value>
                <value>
                    <fullName>Irish</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Luxembourger</fullName>
                </value>
                <value>
                    <fullName>Malaysian</fullName>
                </value>
                <value>
                    <fullName>Malaysian-Indian</fullName>
                </value>
                <value>
                    <fullName>Mexican</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Channel__c</fullName>
        <label>Preferred Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Skype</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Postal Mail</fullName>
                </value>
                <value>
                    <fullName>Linked In</fullName>
                </value>
                <value>
                    <fullName>Home Visit</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Mobile Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Hour__c</fullName>
        <label>Preferred Contact Hour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>In Person (Door to Door)</fullName>
                </value>
                <value>
                    <fullName>Postal Mail</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
                <value>
                    <fullName>Mobile Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <description>Email 1</description>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Mobile__c</fullName>
        <label>Primary Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Telephone_Extension__c</fullName>
        <description>Telephone 1 Extension</description>
        <label>Primary Telephone Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Telephone__c</fullName>
        <description>Telephone 1</description>
        <label>Primary Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>Description</description>
        <label>Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reports To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>High Profile Contacts (Reports To)</relationshipLabel>
        <relationshipName>High_Profile_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
                <value>
                    <fullName>Atty.</fullName>
                </value>
                <value>
                    <fullName>Hon.</fullName>
                </value>
                <value>
                    <fullName>Engr.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <description>Email 2</description>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Mobile__c</fullName>
        <description>Mobile 2</description>
        <label>Secondary Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Telephone_Extension__c</fullName>
        <description>Telephone 2 Extension</description>
        <label>Secondary Telephone Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Telephone__c</fullName>
        <description>Telephone 2</description>
        <label>Secondary Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sports_Hobbies_and_Interests__c</fullName>
        <label>Sports, Hobbies, and Interests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>High Profile Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HPC-{000000}</displayFormat>
        <label>High Profile Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>High Profile Contacts</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CXE_Prevent_Future_DOB_of_VIP</fullName>
        <active>true</active>
        <description>Date of Birth cannot be set to the current or a future date.</description>
        <errorConditionFormula>AND( 
NOT(ISNULL( Birthdate__c )), 
Birthdate__c &gt;= Today() 
)</errorConditionFormula>
        <errorMessage>Date of Birth cannot be set to the current or a future date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Primary_Email_Mobile_Telephone</fullName>
        <active>true</active>
        <description>Primary Phone OR Primary Mobile OR Primary Email should be populated</description>
        <errorConditionFormula>AND( 
ISBLANK(  Primary_Telephone__c  ), 
ISBLANK (  Primary_Mobile__c  ), 
ISBLANK (  Primary_Email__c  ))</errorConditionFormula>
        <errorMessage>Please input value for Primary Telephone, Primary Mobile Phone or Primary Email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Primary_Email_before_Secondary</fullName>
        <active>true</active>
        <description>Primary Email Address needs to be filled up before Secondary Email Address

Secondary Email Address can be filled up if:
Primary Email Address is populated and,
Primary Telephone and Primary Mobile may or may not be populated</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( Secondary_Email__c )), 
ISBLANK(Primary_Email__c  )
)</errorConditionFormula>
        <errorMessage>Primary Email should be set before Secondary Email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Primary_Mobile_before_Alternative</fullName>
        <active>true</active>
        <description>Primary Mobile needs to be filled up before Alternative Mobile

Alternative Mobile can be filled up if:
Primary Mobile is populated and, Primary Telephone and Primary Email Address may or may not be populated</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( Alternative_Mobile__c )), 
ISBLANK(Primary_Mobile__c )
)</errorConditionFormula>
        <errorMessage>Primary Mobile should be set before Alternative Mobile.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Primary_Mobile_before_Secondary</fullName>
        <active>true</active>
        <description>Primary Mobile needs to be filled up before Secondary Mobile

Secondary Mobile can be filled up if:
Primary Mobile is populated and, Primary Telephone and Primary Email Address may or may not be populated</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( Secondary_Mobile__c )), 
ISBLANK(Primary_Mobile__c  )
)</errorConditionFormula>
        <errorMessage>Primary Mobile should be set before Secondary Mobile.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Primary_Tel_before_Secondary</fullName>
        <active>true</active>
        <description>Primary Telephone needs to be filled up before Secondary Telephone

Secondary Telephone can be filled up if:
Primary Telephone is populated and, Primary Email Address and Primary Mobile may or may not be populated</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( Secondary_Telephone__c )), 
ISBLANK(Primary_Telephone__c  )
)</errorConditionFormula>
        <errorMessage>Primary Telephone should be set before Secondary Telephone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_VIP_Alternative_Mobile_Only_Numbers</fullName>
        <active>true</active>
        <description>Alternative Mobile should only contain numbers.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Alternative_Mobile__c)), 
NOT(ISNUMBER(Alternative_Mobile__c)), 
NOT(CONTAINS(Alternative_Mobile__c, &apos;-&apos;)) 
)</errorConditionFormula>
        <errorMessage>Alternative Mobile should only contain numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_VIP_Asst_Phone_Contain_Numbers</fullName>
        <active>true</active>
        <description>Assistant Phone should only contain numbers.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Assistant_Phone__c)), 
NOT(ISNUMBER(Assistant_Phone__c)), 
NOT(CONTAINS(Assistant_Phone__c, &apos;-&apos;)) 
)</errorConditionFormula>
        <errorMessage>Assistant Phone should only contain numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_VIP_Fax_Should_Only_Contain_Numbers</fullName>
        <active>true</active>
        <description>Business Fax should only contain numbers.</description>
        <errorConditionFormula>AND(  
NOT(ISBLANK(Fax__c)), 
NOT(ISNUMBER(Fax__c)), 
NOT(CONTAINS(Fax__c, &apos;-&apos;)) 
)</errorConditionFormula>
        <errorMessage>Business Fax should only contain numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_VIP_Primary_Mobile_Only_Contain_Num</fullName>
        <active>true</active>
        <description>Primary Mobile should only contain numbers.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Primary_Mobile__c )), 
NOT(ISNUMBER(Primary_Mobile__c )), 
NOT(CONTAINS(Primary_Mobile__c , &apos;-&apos;)) 
)</errorConditionFormula>
        <errorMessage>Primary Mobile should only contain numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_VIP_Primary_Tel_Only_Numbers</fullName>
        <active>true</active>
        <description>Telephone 1 should only contain numbers.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( Primary_Telephone__c )), 
NOT(ISNUMBER(Primary_Telephone__c )), 
NOT(CONTAINS(Primary_Telephone__c , &apos;-&apos;)) 
)</errorConditionFormula>
        <errorMessage>Primary Telephone should only contain numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_VIP_Secondary_Mobile_Only_Numbers</fullName>
        <active>true</active>
        <description>Secondary Mobile should only contain numbers.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Secondary_Mobile__c)), 
NOT(ISNUMBER(Secondary_Mobile__c)), 
NOT(CONTAINS(Secondary_Mobile__c, &apos;-&apos;)) 
)</errorConditionFormula>
        <errorMessage>Secondary Mobile should only contain numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_VIP_Secondary_Tel_Only_Numbers</fullName>
        <active>true</active>
        <description>Telephone 2 should only contain numbers.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Secondary_Telephone__c )), 
NOT(ISNUMBER(Secondary_Telephone__c )), 
NOT(CONTAINS(Secondary_Telephone__c , &apos;-&apos;)) 
)</errorConditionFormula>
        <errorMessage>Secondary Telephone should only contain numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Validate_Mobile_1_Format</fullName>
        <active>true</active>
        <description>Mobile Phone should start with +63 then followed by 10-digit number.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Primary_Mobile__c )), 
NOT(REGEX(Primary_Mobile__c ,&quot;[+][6][3][0-9]{10}&quot;)) 
)</errorConditionFormula>
        <errorMessage>Mobile Phone should start with +63 then followed by 10-digit number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Validate_Mobile_2_Format</fullName>
        <active>true</active>
        <description>Mobile Phone should start with +63 then followed by 10-digit number.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Secondary_Mobile__c )), 
NOT(REGEX(Secondary_Mobile__c ,&quot;[+][6][3][0-9]{10}&quot;)) 
)</errorConditionFormula>
        <errorMessage>Mobile Phone should start with +63 then followed by 10-digit number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Validate_Mobile_3_Format</fullName>
        <active>true</active>
        <description>Mobile Phone should start with +63 then followed by 10-digit number.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Alternative_Mobile__c )), 
NOT(REGEX(Alternative_Mobile__c ,&quot;[+][6][3][0-9]{10}&quot;)) 
)</errorConditionFormula>
        <errorMessage>Mobile Phone should start with +63 then followed by 10-digit number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Validate_Telephone_1_Format</fullName>
        <active>true</active>
        <description>Phone should start with +63 then followed by 1 to 2-digit area code and 7-digit number.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Primary_Telephone__c )), 
NOT( 
OR(REGEX(Primary_Telephone__c ,&quot;[+][6][3][0-9]{9}&quot;), 
REGEX(Primary_Telephone__c ,&quot;[+][6][3][0-9]{8}&quot;)) 
) 
)</errorConditionFormula>
        <errorMessage>Phone should start with +63 then followed by 1 to 2-digit area code and 7-digit number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Validate_Telephone_2_Format</fullName>
        <active>true</active>
        <description>Phone should start with +63 then followed by 1 to 2-digit area code and 7-digit number.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Secondary_Telephone__c )), 
NOT( 
OR(REGEX(Secondary_Telephone__c ,&quot;[+][6][3][0-9]{9}&quot;), 
REGEX(Secondary_Telephone__c ,&quot;[+][6][3][0-9]{8}&quot;)) 
) 
)</errorConditionFormula>
        <errorMessage>Phone should start with +63 then followed by 1 to 2-digit area code and 7-digit number.</errorMessage>
    </validationRules>
</CustomObject>